[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rts-llm"
version = "0.1.0"
description = "RTS-LLM: Reprogramming Time Series with Large Language Models"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
dependencies = [
    "torch==2.2.2",
    "accelerate==0.28.0",
    "einops==0.7.0",
    "matplotlib==3.7.0",
    "numpy==1.23.5",
    "pandas==1.5.3",
    "scikit-learn==1.2.2",
    "scipy==1.12.0",
    "tqdm==4.65.0",
    "peft==0.4.0",
    "transformers==4.47.1",
    "bitsandbytes==0.45.0",
    "protobuf==5.29.2",
    "deepspeed==0.14.0",
    "sentencepiece==0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "ruff",
]

[tool.setuptools.packages.find]
include = ["models*", "layers*", "data_provider*", "utils*"]
